<resources>
    <string name="app_name">Dados_App_Android</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
    <string name="Escolha">Escolher o tipo de dado</string>
    <string name="Quantidade">Quantidade de dados</string>
    <string name="Gerar">Gerar</string>
</resources>

<!--    D4.-->
<!--    • D6.-->
<!--    • D8.-->
<!--    • D10.-->
<!--    • D12.-->
<!--    • D20.-->
<!--    • D100.-->