<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEscolha">

        <RadioButton
            android:id="@+id/rbD4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d4" />

        <RadioButton
            android:id="@+id/rbD6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d6" />

        <RadioButton
            android:id="@+id/rbD8"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/d8" />

        <RadioButton
            android:id="@+id/rbD10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d10" />

        <RadioButton
            android:id="@+id/rbD12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d12" />

        <RadioButton
            android:id="@+id/rbD20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d20" />

        <RadioButton
            android:id="@+id/rbD100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d100" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvEscolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Escolha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sQtd"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btGearar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/Gerar"
        app:layout_constraintStart_toStartOf="@+id/sQtd"
        app:layout_constraintTop_toBottomOf="@+id/sQtd" />

    <TextView
        android:id="@+id/tvSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="39dp"
        app:layout_constraintStart_toStartOf="@+id/btGearar"
        app:layout_constraintTop_toBottomOf="@+id/btGearar" />

</androidx.constraintlayout.widget.ConstraintLayout>